--- a/styles.css
+++ b/styles.css
@@ -152,77 +152,55 @@ h2 {
 
 .discount {
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .discount p {
   font-size: 0.75rem;
+  padding-bottom: 0.2rem;
+  margin: 1rem;
 }
 
-.discount span {
+.discount-rate {
   font-size: 0.6rem;
+  background-color: #feede8;
+  color: #ff8d68;
+  padding: 0.3rem;
+  border-radius: 2rem;
+  margin-left: 0.5rem;
 }
 
-/* The switch - the box around the slider */
-.switch {
+.switch-wrapper {
+  display: inline-flex;
   position: relative;
-  display: inline-block;
-  width: 3.8rem;
+  height: 1.5rem;
+  width: 3rem;
+  align-items: center;
+}
+.switch-background {
+  z-index: 0;
+  position: absolute;
+  border-radius: 2rem;
+  background-color: #cfd8ef;
   height: 2rem;
+  width: 3rem;
 }
-
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 1.6rem;
-  width: 1.6rem;
-  left: 0.3rem;
-  bottom: 4px;
+.switch-button {
+  z-index: 1;
   background-color: white;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-input:checked + .slider {
-  background-color: #2196f3;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196f3;
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(1.6rem);
-  -ms-transform: translateX(1.6rem);
-  transform: translateX(1.6rem);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 1.5rem;
-}
-
-.slider.round:before {
+  left: 50%;
+  height: 1.2rem;
+  position: absolute;
+  width: 1.2rem;
   border-radius: 50%;
+  transition: right 0.2s ease-out, left 0.2s ease-out;
+}
+
+.radio {
+  height: 1rem;
+  width: 50%;
+  z-index: 2;
 }
 
 .features {
@@ -241,6 +219,7 @@ input:checked + .slider:before {
   display: flex;
   align-items: center;
   justify-content: center;
+  color: #848ead;
 }
 .features p {
   margin-top: 0;
