--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,7 @@ h2 {
   align-items: center;
 }
 
-#output {
+.price-section > * {
   margin-top: 1rem;
   font-weight: 800;
   font-size: 2rem;
@@ -151,24 +151,32 @@ h2 {
 }
 
 .discount {
-  display: flex;
   align-items: center;
   justify-content: center;
+  display: flex;
+  margin-left: 2rem;
 }
 
-.discount p {
+.discount label {
   font-size: 0.75rem;
   padding-bottom: 0.2rem;
-  margin: 1rem;
+  color: #848ead;
 }
 
 .discount-rate {
   font-size: 0.6rem;
   background-color: #feede8;
   color: #ff8d68;
-  padding: 0.3rem;
+  padding: 0.1rem 0.3rem;
   border-radius: 2rem;
   margin-left: 0.5rem;
+}
+
+fieldset {
+  display: flex;
+  align-items: center;
+  border: none;
+  padding-right: 0;
 }
 
 .switch-wrapper {
@@ -177,7 +185,9 @@ h2 {
   height: 1.5rem;
   width: 3rem;
   align-items: center;
+  margin: 0.5rem;
 }
+
 .switch-background {
   z-index: 0;
   position: absolute;
@@ -189,18 +199,23 @@ h2 {
 .switch-button {
   z-index: 1;
   background-color: white;
-  left: 50%;
+  left: 6%;
   height: 1.2rem;
   position: absolute;
   width: 1.2rem;
   border-radius: 50%;
-  transition: right 0.2s ease-out, left 0.2s ease-out;
+  transition: all 0.3s;
 }
 
 .radio {
   height: 1rem;
-  width: 50%;
+  width: 100%;
   z-index: 2;
+  opacity: 0;
+}
+
+#yearly:checked ~ .switch-button {
+  transform: translateX(1.4rem);
 }
 
 .features {
@@ -224,6 +239,7 @@ h2 {
 .features p {
   margin-top: 0;
   margin-left: 1rem;
+  font-size: 0.8rem;
 }
 
 .start-trial-btn {
@@ -232,4 +248,5 @@ h2 {
   color: #becdff;
   border-radius: 2rem;
   margin: 1rem;
+  font-size: 0.8rem;
 }
